--- a/04youtubeProject/.env.sample
+++ b/04youtubeProject/.env.sample
@@ -1,2 +1,7 @@
 PORT = 8000
-MONGODB_URL = mongodb url
+MONGODB_URL = mongo db url
+CORS_ORIGIN = *
+ACCESS_TOKEN_SECRET=a
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=c
+REFRESH_TOKEN_EXPIRY=10d
