uploading file in backend using multer

--- a/04youtubeProject/.env.sample
+++ b/04youtubeProject/.env.sample
@@ -5,3 +5,7 @@ ACCESS_TOKEN_SECRET=a
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=c
 REFRESH_TOKEN_EXPIRY=10d
+
+CLOUDINARY_CLOUD_NAME=A
+CLOUDINARY_API_KEY=B
+CLOUDINARY_API_SECRET=C
